--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,11 @@
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
-framework = espidf
+framework = arduino
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+lib_deps =
+    yoursunny/esp32cam
 
 monitor_speed = 115200
 monitor_rts = 0
