--- a/platformio.ini
+++ b/platformio.ini
@@ -1,22 +1,17 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
 framework = arduino
-build_flags = -std=gnu++17
-build_unflags = -std=gnu++11
-lib_deps =
-    yoursunny/esp32cam
 
+; Hack to make monitoring work
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
+
+; ESP32 camera C++ wrapper uses new stuff,
+; so this overrides the default standard
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+
+lib_deps =
+    yoursunny/esp32cam
